2024-07-10T01:01:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9866422217 # 701
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-07-10
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 3175 / 0 3176 / +0 +1

2024-07-06T00:58:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9815249268 # 693
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-07-06
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 3173 / 0 3175 / +0 +2

2024-07-04T00:59:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9786819951 # 689
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-07-04
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 3170 / 0 3173 / +0 +3

2024-07-02T01:00:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9753238745 # 685
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-07-02
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 3169 / 0 3170 / +0 +1

2024-06-28T00:59:32Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9705741930 # 677
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-06-28
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 3168 / 0 3169 / +0 +1

2024-06-27T00:59:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9688940530 # 675